# RePlate

./: .gitignore  Codekshetra Evaluation 1.pptx  README.md  project_compact.md  startApp.sh
RePlate/backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  test_smart_pricing_agent.py
RePlate/backend/agent_systems/: __init__.py  consumer_recommendation_agent.py  demand_forecast_agent.py  demo_food_data.json  food_rescue_strategy_agent.py  food_safety_agent.py  groq_client.py  ngo_matching_agent.py  smart_pricing_agent.py
RePlate/backend/alembic/: env.py
RePlate/backend/alembic/versions/: 1c6b2b7f3f66_add_password_hash_nullable_workos.py  8017926abc6d_ngo_module_tables.py  a1b2c3d4e5f6_food_tables.py  a2b3c4d5e6f7_add_donor_role_to_food_listing.py  b3c4d5e6f7a8_seller_profile_extended_fields.py  c1d2e3f4a5b6_merge_alembic_heads.py  cb3101a604ec_initial_schema.py  cd9d50548025_merge_donor_role_and_password_hash.py  d4e5f6a7b8c9_seller_module_tables_and_listing_metrics.py  e7f8a9b0c1d2_add_ngo_pickup_request_notification_type.py  f2c3d4e5f6a7_add_food_listing_seller_coords.py  f7a8b9c0d1e2_seller_backend_domain_expansion.py  f9b0c1d2e3f4_inspector_backend_tables.py
RePlate/backend/app/: main.py
RePlate/backend/app/core/: config.py  database.py  deps.py  impact_constants.py  security.py
RePlate/backend/app/models/: __init__.py  base.py  food.py  ngo.py  (+2 more)
RePlate/backend/scripts/: rebuild_impact_from_orders.py  recalculate_impact_stats.py  reset_impact_stats.py  seed.py  seed_demo_shops.py  seed_synthetic_sellers.py  test_ngo_flow.py
(+167 files in other folders)
